--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,4 +1,7 @@
 /* write your override styles here */
+#wall .tag-1 {
+  display: none;
+}
 .tag-1 {
   background: url(../images/tag-1.png) no-repeat;
   z-index: 7;
