--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -2,3 +2,8 @@
 #wall .tag-1 {
   display: none;
 }
+.tag-1 {
+  background: url(../images/tag-1.png) no-repeat;
+  z-index: 7;
+  display: block;
+}
